# TM_TrainingLimit

./: .gitignore  .gitmodules
.github/workflows/: build.yml
skse-plugin/: CMakeLists.txt  vcpkg.json
skse-plugin/src/: Counter.cpp  Counter.h  Hooks.cpp  Limits.cpp  Limits.h  UI.cpp  UI.h  main.cpp
skse-plugin/triplets/: x64-windows-static-md.cmake
